Fixing the downloading of data from carepat

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,13 +32,14 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-URL: https://github.com/RiviereQuentin/Wimtrap
-BugReports: https://github.com/RiviereQuentin/Wimtrap/issues
+URL: https://github.com/RiviereQuentin/WimtrapWeb
+BugReports: https://github.com/RiviereQuentin/WimtrapWeb/issues
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
-Remotes: RiviereQuentin/Wimtrap
+Remotes: RiviereQuentin/Wimtrap,
+         Bioconductor/GenomicRanges
 Depends: 
     R (>= 2.10)
