Changing package name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: PlantCarepat
+Package: WimtrapWeb
 Title: Plant 'Cis-Acting Regulatory Elements' Prediction Tools
 Version: 0.0.0.9000
 Authors@R: person('Quentin', 'Rivière', email = 'qri@hotmail.be', role = c('cre', 'aut'))
@@ -28,18 +28,25 @@ Imports:
     xgboost,
     bslib,
     thematic,
-    Wimtrap
+    Wimtrap,
+    thinkr,
+    shinyjs,
+    pkgload
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 URL: https://github.com/RiviereQuentin/WimtrapWeb
 BugReports: https://github.com/RiviereQuentin/WimtrapWeb/issues
 Suggests: 
+    rmarkdown,
+    knitr,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
 Remotes: RiviereQuentin/Wimtrap,
-         Bioconductor/GenomicRanges
+         Bioconductor/GenomicRanges,
+         Bioconductor/AnnotationDbi
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
