--- a/heroku.yml
+++ b/heroku.yml
@@ -2,7 +2,7 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: bundle exec puma -C config/puma.rbbuild:
+  web: bundle exec puma -C config/puma.rbbuild
   docker:
     web: Dockerfile
 run:
