--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,7 @@ importFrom(xgboost,xgb.DMatrix)
 importFrom(xgboost,xgb.cv)
 importFrom(xgboost,xgb.importance)
 importFrom(xgboost,xgb.train)
+importFrom("grDevices", "dev.off", "png")
+importFrom("graphics", "legend", "lines", "mtext")
+importFrom("stats", "rnorm")
+importFrom("utils", "write.table")
